#
# SPDX-License-Identifier: BSD-3-Clause
#
# Copyright © 2025 Mark Murray
#

src_semihost += files([
                       'mc6809-exit.c',
                       'mc6809-iob.c',
                     ]) + [
  src_semihost_fake_close,
  src_semihost_fake_fstat,
  src_semihost_fake_getentropy,
  src_semihost_fake_getpid,
  src_semihost_fake_gettimeofday,
  src_semihost_fake_isatty,
  src_semihost_fake_kill,
  src_semihost_fake_lseek,
  src_semihost_fake_open,
  src_semihost_fake_read,
  src_semihost_fake_stat,
  src_semihost_fake_unlink,
  src_semihost_fake_write,
]
